; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvideo/extr_usbvideo.c_RingQueue_WakeUpInterruptible.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvideo/extr_usbvideo.c_RingQueue_WakeUpInterruptible.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RingQueue = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RingQueue_WakeUpInterruptible(%struct.RingQueue* %0) #0 {
  %2 = alloca %struct.RingQueue*, align 8
  store %struct.RingQueue* %0, %struct.RingQueue** %2, align 8
  %3 = load %struct.RingQueue*, %struct.RingQueue** %2, align 8
  %4 = icmp ne %struct.RingQueue* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load %struct.RingQueue*, %struct.RingQueue** %2, align 8
  %8 = getelementptr inbounds %struct.RingQueue, %struct.RingQueue* %7, i32 0, i32 0
  %9 = call i64 @waitqueue_active(i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.RingQueue*, %struct.RingQueue** %2, align 8
  %13 = getelementptr inbounds %struct.RingQueue, %struct.RingQueue* %12, i32 0, i32 0
  %14 = call i32 @wake_up_interruptible(i32* %13)
  br label %15

15:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @waitqueue_active(i32*) #1

declare dso_local i32 @wake_up_interruptible(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
